# rust_cross_embedded_template

./: .gitpod.yml  readme.md
.cargo/: config.toml
01_wait_forever/: Cargo.toml
02_runtime_init/: Cargo.toml
